update want luckydraw/update options, remove email in post request, only in patch now
